--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dac-compare-stock",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "compare stock",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test \" && exit 1"
   },
   "devDependencies": {
     "mysql": "^2.18.1"
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dateformat": "^4.4.1"
+    "dateformat": "^4.4.1",
+    "test": "^0.6.0"
   }
 }
